--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^3.3.3",
     "chart.js": "^3.9.1",
+    "dotenv": "^16.0.1",
     "moralis": "^2.0.1",
     "next": "12.2.5",
     "react": "18.2.0",
@@ -22,6 +24,7 @@
     "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "hardhat": "^2.10.2",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
   }
